Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Vuongnguyen by vegeanfire</title>
+    <title>Vương Nguyễn  by vegeanfire</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Vuongnguyen</h1>
+        <h1>Vương Nguyễn </h1>
         <h2>blog for front-end</h2>
         <a href="https://github.com/vegeanfire/vuongnguyen" class="button"><small>View project on</small> GitHub</a>
       </div>
